--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@ Nevertheless, the development of new methodologies is challenging because of the
 New supervised or unsupervised data mining algorithms should be defined by taking into account the constraints mentioned above, to provide methods for the efficient extraction of biological meaningful information from the large-scale amount of life science data. Lately, the application of such techniques applied to personalized and translational medicine is becoming a central area. As methodologies evolve, data mining analysis has the potential to discover the complexity of molecular mechanisms governing complex diseases as well as to drive researchers to develop new drugs by revolutionizing the process of drug discovery.
 Many research problems in current HT data are still open, such as the integration of multiple databases, which is related to the different data representation, which makes it challenging to use in the same experimental data coming from several databases. To simplify the researcher's work, it is mandatory to develop automatic preprocessing methods to provide a consistent data representation, allowing a broader view of biological events not available without a uniform data representation. Moreover, the combined use of data mining and text mining can further improve the analysis of heterogeneous sources (i.e., protein, DNA, RNA, and microRNA), which are emerging research topics.
 This workshop aims to bring together researchers in data mining, bioinformatics, and biomedicine to discuss the current state of the art, by using data mining to discover biological knowledge, focusing mainly on applications on biomedicine, omics science, drug discovery, sharing and improving the best practice guidelines for reporting the fundamental principles of data mining theory in life sciences, representing an opportunity to facilitate interdisciplinary collaborations.
-Topics
-   Topics of interest include, but not limited to:
+
+   <h1>Topics</h1>
+Topics of interest include, but not limited to:
 Data mining
 Genomics
 Proteomics
