--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <body>
-The development of High-Throughout (HT) innovative technologies (e.g., next-generation sequencing, microarray, and mass spectrometry) for the analysis of biological samples as for instance, genomics, transcriptomics, proteomics and metabolomics, led to generate tera or even peta-Byte sized files storing heterogeneous and complex data of several organisms among which human. 
+<p align="justify">The development of High-Throughout (HT) innovative technologies (e.g., next-generation sequencing, microarray, and mass spectrometry) for the analysis of biological samples as for instance, genomics, transcriptomics, proteomics and metabolomics, led to generate tera or even peta-Byte sized files storing heterogeneous and complex data of several organisms among which human. 
 Research in this area is data-intensive; that is, data sets are massive and highly heterogeneous. To produce knowledge from this data, researchers need to integrate these large and diverse data sets. The integration of different data can contribute to obtaining a holistic vision of complex phenomena such as cancer or diabetes, impossible to achieve by analyzing the data individually. 
 As a result, HT data need for different and more efficient data mining techniques, starting from data preprocessing, transformation, and knowledge extraction methods, since the traditional data mining methods are neither effective nor efficient. Even if conventional data mining methods may be adapted for analyzing HT data, they do not guarantee enough optimization in response times, resource management, as well as the obtained results, may present low accuracy, and quality. Thus, it is mandatory to develop new techniques that can help the researcher to spur light in the behavior of complex biological phenomena such as cancer, diabetes, and Alzheimer.
 Nevertheless, the development of new methodologies is challenging because of the large scale, heterogeneity, and complexity of the current HT experimental data sets. 
 New supervised or unsupervised data mining algorithms should be defined by taking into account the constraints mentioned above, to provide methods for the efficient extraction of biological meaningful information from the large-scale amount of life science data. Lately, the application of such techniques applied to personalized and translational medicine is becoming a central area. As methodologies evolve, data mining analysis has the potential to discover the complexity of molecular mechanisms governing complex diseases as well as to drive researchers to develop new drugs by revolutionizing the process of drug discovery.
 Many research problems in current HT data are still open, such as the integration of multiple databases, which is related to the different data representation, which makes it challenging to use in the same experimental data coming from several databases. To simplify the researcher's work, it is mandatory to develop automatic preprocessing methods to provide a consistent data representation, allowing a broader view of biological events not available without a uniform data representation. Moreover, the combined use of data mining and text mining can further improve the analysis of heterogeneous sources (i.e., protein, DNA, RNA, and microRNA), which are emerging research topics.
-This workshop aims to bring together researchers in data mining, bioinformatics, and biomedicine to discuss the current state of the art, by using data mining to discover biological knowledge, focusing mainly on applications on biomedicine, omics science, drug discovery, sharing and improving the best practice guidelines for reporting the fundamental principles of data mining theory in life sciences, representing an opportunity to facilitate interdisciplinary collaborations.
+This workshop aims to bring together researchers in data mining, bioinformatics, and biomedicine to discuss the current state of the art, by using data mining to discover biological knowledge, focusing mainly on applications on biomedicine, omics science, drug discovery, sharing and improving the best practice guidelines for reporting the fundamental principles of data mining theory in life sciences, representing an opportunity to facilitate interdisciplinary collaborations.</p>
 
    <h1>Topics</h1>
 Topics of interest include, but not limited to:
@@ -21,7 +21,7 @@ Text Mining
 Deep Learning
 Network Analysis
 
-PROGRAM
+   <h1>PROGRAM</h1>
 The workshop will take place on November 17-20, 2020, Sorrento, Italy (To Be Announced). The program is not available yet.
 Submission Guidelines
 The paper submission site:
@@ -56,7 +56,7 @@ Organizer
 Giuseppe Agapito, University Magna Graecia of Catanzaro, Italy
 Chiara Zucco, University Magna Graecia of Catanzaro, Italy
 
-PROGRAM COMMITTEE (TO BE CONFIRMED)
+PROGRAM COMMITTEE
 Marianna Milano, University Magna Graecia of Catanzaro, Italy
 Marzia Settino, University Magna Graecia of Catanzaro, Italy
 Barbara Calabrese, University Magna Graecia of Catanzaro, Italy
