--- a/index.html
+++ b/index.html
@@ -32,66 +32,72 @@ sharing and improving the best practice guidelines for reporting the fundamental
 representing an opportunity to facilitate interdisciplinary collaborations.</p>
 
 <h1>Topics</h1>
-Topics of interest include, but not limited to:<br />
-Data mining<br />
-Genomics<br />
-Proteomics<br />
-Interactomics<br />
-Artificial Intelligence<br />
-Metabolomics<br />
-Text Mining<br />
-Deep Learning<br />
-Network Analysis<br />
+Topics of interest include, but not limited to:<br>
+Data mining<br>
+Genomics<br>
+Proteomics<br>
+Interactomics<br>
+Artificial Intelligence<br>
+Metabolomics<br>
+Text Mining<br>
+Deep Learning<br>
+Network Analysis<br>
 
-   <h1>PROGRAM</h1>
-The workshop will take place on November 17-20, 2020, Sorrento, Italy (To Be Announced). The program is not available yet.
-Submission Guidelines
-The paper submission site:
-https://wi-lab.com/cyberchair/2020/icdm20/scripts/ws_submit.php?subarea=S
+<h1>PROGRAM</h1>
+The workshop will take place on November 17-20, 2020, Sorrento, Italy (To Be Announced). The program is not available yet.<br>
+Submission Guidelines<br>
+The paper submission site:<br>
+https://wi-lab.com/cyberchair/2020/icdm20/scripts/ws_submit.php?subarea=S <br>
 
-Paper submissions should be limited to a maximum of ten (10) pages, in the IEEE 2-column format (https://www.ieee.org/conferences/publishing/templates.html), including the bibliography and any possible appendices. Submissions longer than 10 pages will be rejected without review. All submissions will be triple-blind reviewed by the Program Committee on the basis of technical quality, relevance to scope of the conference, originality, significance, and clarity. The following sections give further information for authors.
+Paper submissions should be limited to a maximum of ten (10) pages, in the IEEE 2-column format (https://www.ieee.org/conferences/publishing/templates.html),<br> 
+including the bibliography and any possible appendices. Submissions longer than 10 pages will be rejected without review. <br> 
+All submissions will be triple-blind reviewed by the Program Committee on the basis of technical quality, relevance to scope of the conference, 
+originality, significance, and clarity. The following sections give further information for authors.<br>
 
-Triple blind submission guidelines
-Since 2011, ICDM has imposed a triple blind submission and review policy for all submissions. Authors must hence not use identifying information in the text of the paper and bibliographies must be referenced to preserve anonymity. Any papers available on the Web (including Arxiv) no longer qualify for ICDM submissions, as their author information is already public.
+   <h1>Triple blind submission guidelines</h1>
+Since 2011, ICDM has imposed a triple blind submission and review policy for all submissions. Authors must hence not use 
+identifying information in the text of the paper and bibliographies must be referenced to preserve anonymity. 
+Any papers available on the Web (including Arxiv) no longer qualify for ICDM submissions, as their author information is already public.
 Accepted papers will be published in the conference proceedings by the IEEE Computer Society Press. All manuscripts are submitted as full papers and are reviewed based on their scientific merit. There is no separate abstract submission step. There are no separate industrial, application, short paper or poster tracks during submission. Manuscripts must be submitted electronically in online submission system (http://wi-lab.com/cyberchair/2020/icdm20/scripts/submit.php?subarea=DM). We do not accept email submissions.
-JOURNAL SPECIAL ISSUE
-A selected number of best papers will be invited for possible inclusion, in an expanded and revised form, in the Knowledge and Information Systems journal (http://kais.bigke.org/) published by Springer.
+   <h1>JOURNAL SPECIAL ISSUE</h1>
+A selected number of best papers will be invited for possible inclusion, in an expanded and revised form, <br>
+in the Knowledge and Information Systems journal (http://kais.bigke.org/) published by Springer.<br>
 
-IMPORTANT DATES
-Full paper submissions: June 2, 2020
-Contest requirement specification and sample data available: June 12, 2020
-Contest team registration begins. Data sets are available: June 26, 2020
-Demo and tutorial proposals: July 10, 2020
-Contest final submission deadline: 23:59, July 31, 2020.
-Workshop paper submissions: August 24, 2020
-Conference paper, tutorial, demo notification: August 20, 2020
-Contest notifications to shortlisted teams for web applications: 23:59, August 10, 2020
-Contest finalist notifications: August 28, 2020
-Workshop paper notification: September 17, 2020
-Camera-ready deadline and copyright forms: September 24, 2020
-Conference dates: November 17-20, 2020
-Contest prize presentations at ICDM 2020: November 19, 2020
+   <h1>IMPORTANT DATES </h1>
+Full paper submissions: June 2, 2020 <br>
+Contest requirement specification and sample data available: June 12, 2020<br>
+Contest team registration begins. Data sets are available: June 26, 2020<br>
+Demo and tutorial proposals: July 10, 2020<br>
+Contest final submission deadline: 23:59, July 31, 2020.<br>
+Workshop paper submissions: August 24, 2020<br>
+Conference paper, tutorial, demo notification: August 20, 2020<br>
+Contest notifications to shortlisted teams for web applications: 23:59, August 10, 2020<br>
+Contest finalist notifications: August 28, 2020<br>
+Workshop paper notification: September 17, 2020<br>
+Camera-ready deadline and copyright forms: September 24, 2020<br>
+Conference dates: November 17-20, 2020<br>
+Contest prize presentations at ICDM 2020: November 19, 2020<br>
 More Information
-More information about ICDM 2020: http://icdm2020.bigke.org/
+More information about ICDM 2020: http://icdm2020.bigke.org/<br>
 
-Organizer
-Giuseppe Agapito, University Magna Graecia of Catanzaro, Italy
-Chiara Zucco, University Magna Graecia of Catanzaro, Italy
+Organizer<br>
+Giuseppe Agapito, University Magna Graecia of Catanzaro, Italy<br>
+Chiara Zucco, University Magna Graecia of Catanzaro, Italy<br>
 
-PROGRAM COMMITTEE
-Marianna Milano, University Magna Graecia of Catanzaro, Italy
-Marzia Settino, University Magna Graecia of Catanzaro, Italy
-Barbara Calabrese, University Magna Graecia of Catanzaro, Italy
-Chiara Pastrello Princess Margaret Cancer Center, UHN, Toronto, Canada
-Alberto Falcone, Univeristy of Calabria, Italy
-Antonio Guerriero, Icar-CNR, Italy
-Claudio Savaglio, Univeristy of Calabria, Italy
-Loris Belcastro, Univeristy of Calabria, Italy
-Mario Cannataro, University Magna Graecia of Catanzaro, Italy
+PROGRAM COMMITTEE<br>
+Marianna Milano, University Magna Graecia of Catanzaro, Italy<br>
+Marzia Settino, University Magna Graecia of Catanzaro, Italy<br>
+Barbara Calabrese, University Magna Graecia of Catanzaro, Italy<br>
+Chiara Pastrello Princess Margaret Cancer Center, UHN, Toronto, Canada<br>
+Alberto Falcone, Univeristy of Calabria, Italy<br>
+Antonio Guerriero, Icar-CNR, Italy<br>
+Claudio Savaglio, Univeristy of Calabria, Italy<br>
+Loris Belcastro, Univeristy of Calabria, Italy<br>
+Mario Cannataro, University Magna Graecia of Catanzaro, Italy<br>
 
-Contacts:
-Giuseppe Agapito
-Chiara Zucco
+Contacts:<br>
+Giuseppe Agapito<br>
+Chiara Zucco<br>
 
 </body>
 </html>
