--- a/index.html
+++ b/index.html
@@ -1,5 +1,15 @@
 <!DOCTYPE html>
 <html>
+   <head>
+    <title>1st International Workshop on Novel Data Mining Methods for the Analysis of High-Throughput Biological Data (DM-HT-D)
+</title>
+      <hr width="10000">
+      <h1>Held in Conjunction wiht the 20th IEEE International Conference on Data Mining  IEEE ICDM 2020
+Sorrento, Italy, November 17-20, 2020 <br>
+http://icdm2020.bigke.org/</h1>
+</head>
+
+   
 <body>
 <p>The development of High-Throughout (HT) innovative technologies (e.g., next-generation sequencing, microarray, and mass spectrometry)
 for the analysis of biological samples as for instance, genomics, transcriptomics, proteomics and metabolomics, led to generate tera or 
