--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@ Contest prize presentations at ICDM 2020: November 19, 2020<br>
 More Information
 More information about ICDM 2020: http://icdm2020.bigke.org/<br>
 
-Organizer<br>
+   <h2>Organizer</h2><br>
 Giuseppe Agapito, University Magna Graecia of Catanzaro, Italy<br>
 Chiara Zucco, University Magna Graecia of Catanzaro, Italy<br>
 
-PROGRAM COMMITTEE<br>
+   <h2>PROGRAM COMMITTEE</h2><br>
 Marianna Milano, University Magna Graecia of Catanzaro, Italy<br>
 Marzia Settino, University Magna Graecia of Catanzaro, Italy<br>
 Barbara Calabrese, University Magna Graecia of Catanzaro, Italy<br>
@@ -105,7 +105,7 @@ Claudio Savaglio, Univeristy of Calabria, Italy<br>
 Loris Belcastro, Univeristy of Calabria, Italy<br>
 Mario Cannataro, University Magna Graecia of Catanzaro, Italy<br>
 
-Contacts:<br>
+<h2>Contacts:</h2><br>
 Giuseppe Agapito<br>
 Chiara Zucco<br>
 
